[gd_scene load_steps=9 format=2]

[ext_resource path="res://enviroment/laser/Soldier.gd" type="Script" id=1]
[ext_resource path="res://enviroment/laser/laser_sprite.png" type="Texture" id=2]
[ext_resource path="res://enviroment/laser/beam_pulse1.shader" type="Shader" id=3]
[ext_resource path="res://sounds/RayPower.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.27268, 17.2346 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 206.338, 474.456 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 141.682, 4.63781 )

[node name="Soldier" type="KinematicBody2D"]
rotation = 1.5708
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 9.55174, 9.36438 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 25, 9 )

[node name="Line2D" type="Line2D" parent="."]
material = SubResource( 2 )
points = PoolVector2Array( 25, 9, 231.473, 9.27283 )
default_color = Color( 2, 0.17, 0, 1 )
texture_mode = 101
end_cap_mode = 2

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 26.0572, 19.0315 )
rotation = -1.5708
scale = Vector2( 0.27593, 0.300005 )
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 195, -0.000656128 )
shape = SubResource( 3 )

[node name="HitArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
position = Vector2( 168.146, 9.58737 )
shape = SubResource( 4 )

[node name="LaserAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -25.143
attenuation = 1.41421

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="HitArea" to="." method="_on_HitArea_body_entered"]
[connection signal="body_exited" from="HitArea" to="." method="_on_HitArea_body_exited"]
